# mpt-usage-reporting-extension

./: .coderabbit.yaml  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  azure-pipelines.yml  compose.local.yaml  compose.yaml  deployment-manifest.yaml
backend/: .env.local  .env.sample  pyproject.toml  sonar-project.properties
backend/docs/: examples.http
backend/migrations/: 20260527134121_fake_data_migration.py  20260527134133_fake_schema_migration.py  20260603155923_create_accumulation_tables.py  20260629151426_create_insights_tables.py  20260713120000_create_postgres_accumulation_tables.py  20260713120100_create_postgres_insights_tables.py  20260714111446_backfill_subscriptions_usage.py
backend/mpt_usage_reporting_extension/: accumulation.py  app.py  charge_persistence.py  charges.py  cli.py  constants.py  context.py  exceptions.py  mpt_client.py  observability.py  pipeline.py  selectors.py  settings.py  statements.py  subscription_estimates.py  types.py  utils.py  window.py
backend/mpt_usage_reporting_extension/cli/: __init__.py  _app.py
backend/mpt_usage_reporting_extension/cli/commands/: cleanup.py  delete.py  push_estimates_by_id.py  push_estimates_by_updated_at.py  recalculate.py  run.py  status.py
backend/mpt_usage_reporting_extension/flows/pipelines/: purchase.py  statement.py
backend/mpt_usage_reporting_extension/flows/steps/: log_order.py  log_statement.py
backend/mpt_usage_reporting_extension/persistence/: __init__.py  database.py  models.py  protocols.py  repositories.py
backend/mpt_usage_reporting_extension/persistence/postgres/: auth.py  connection.py  database.py  insights.py
backend/mpt_usage_reporting_extension/persistence/postgres/repositories/: __init__.py  agreement.py  engine.py  subscription.py
backend/mpt_usage_reporting_extension/persistence/sqlite/: __init__.py  database.py  insights.py  repositories.py  retry.py
backend/mpt_usage_reporting_extension/routers/api/: agreements.py  executions.py  subscriptions.py
backend/mpt_usage_reporting_extension/routers/events/: order.py  statement.py
backend/mpt_usage_reporting_extension/routers/plugs/: subscriptions.py
backend/mpt_usage_reporting_extension/services/: accumulation_cleanup.py  bucket_clean.py  bucket_delete.py  charge_persistence.py  charges.py  estimates_uploader.py  execution_notifier.py  execution_status.py  execution_tracker.py  helper.py  recalculate_launcher.py  scope_resolver.py  statements.py  subscription_estimates.py
backend/swo_playground/: app.py  settings.py
backend/swo_playground/flows/pipelines/: purchase.py
backend/swo_playground/routers/api/: agreements.py
backend/swo_playground/routers/events/: order.py
backend/swo_playground/routers/plugs/: agreements.py
backend/tests/: conftest.py  test_accumulation_cleanup.py  test_app.py  test_charge_persistence.py  test_charges.py  test_cli.py  test_mpt_client.py  test_observability.py  test_pipeline.py  test_settings.py  test_statements.py  test_subscription_estimate_report.py  test_subscription_estimates.py  test_utils.py  test_window.py
backend/tests/cli/: conftest.py  test_app.py
backend/tests/cli/commands/: test_cleanup.py  test_delete.py  test_push_estimates_by_id.py  test_push_estimates_by_updated_at.py  test_recalculate.py  test_run.py  test_status.py
backend/tests/flows/pipelines/: test_purchase.py  test_statement.py
backend/tests/flows/steps/: test_log_order_step.py  test_log_statement_step.py
backend/tests/migrations/: test_create_accumulation_tables.py
backend/tests/persistence/: conftest.py  test_database.py  test_repositories.py
backend/tests/persistence/postgres/: conftest.py  test_agreement_repository.py  test_auth.py  test_connection.py  test_database.py  test_insights.py  test_subscription_repository.py
backend/tests/persistence/sqlite/: conftest.py  test_database.py  test_insights.py  test_repositories.py  test_retry.py
backend/tests/routers/: test_agreements.py  test_events.py  test_executions.py  test_statements.py  test_subscriptions.py
backend/tests/services/: test_accumulation_cleanup.py  test_bucket_clean.py  test_bucket_delete.py  test_charge_persistence.py  test_charges.py  test_estimate_upload_report.py  test_estimates_uploader.py  test_execution_notifier.py  test_execution_status.py  test_execution_tracker.py  test_recalculate_launcher.py  test_scope_resolver.py  test_statements.py
docs/: deployment.md  (+6 more)
(+73 files in other folders)
